--- a/network/config.json
+++ b/network/config.json
@@ -5,12 +5,12 @@
   "logo": {
     "file": "",
     "link": "",
-    "text": "ADAcadabra"
+    "text": "AbracADAbra"
   },
   "text": {
     "more": "The network is clustered by 2 clusters",
-    "intro": "Force based network of English speaking gaming and politics channel channel",
-    "title": "Force based network of political channels"
+    "intro": "Force based network of English speaking gaming and politics channel channel clustered with 2 clusters",
+    "title": "Force based network of English speaking gaming and politics channel channel"
   },
   "legend": {
     "edgeLabel": "Shard commentator",
